# Getopt-for-Visual-Studio

./: .appveyor.yml  CMakeLists.txt  getopt-config.cmake.in  getopt.h
test/: CMakeLists.txt  getopt_mul1.c  getopt_mul2.c  getopt_simple.c
